.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_OrderShipment__c.object
<CustomObject>
    <description>The ccrz__E_OrderShipment__c object contains basic shipment details for an order.</description>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shipment Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__BillOfLading__c</fullName>
        <description>NOT CURRENTLY USED.</description>
        <label>Bill of lading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Carrier__c</fullName>
        <description>Should be defined specific to the implementation. Contains list of keys to the supported carriers.</description>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DeliveryDate__c</fullName>
        <description>The expected date of delivery.</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderShipmentId__c</fullName>
        <description>Id for external use.</description>
        <externalId>true</externalId>
        <label>Order Shipment Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Order__c</fullName>
        <description>The order that this is a shipment for.</description>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Order Shipments</relationshipLabel>
        <relationshipName>E_OrderShipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipmentDate__c</fullName>
        <description>The date the shipment was shipped.</description>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingMethod__c</fullName>
        <description>Shipping method used.</description>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TrackingNo__c</fullName>
        <description>Tracking number for the shipment. This will be passed to the carriers site as the tracking number.</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Order Shipment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Order Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>